--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Narrow Jumbotron Template for Bootstrap</title>
+    <title>Phonics Practice</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="jumbotron-narrow.css" rel="stylesheet">
+    <link href="assets/css/jumbotron-narrow.css" rel="stylesheet">
 
     <script>
 			function myFunction()
@@ -37,6 +37,7 @@
 
       <div class="jumbotron">
         <span id="word" class="h1"></span>
+        <p></p>
         <p><a class="btn btn-lg btn-success" role="button" onclick="myFunction()">Next...</a></p>
       </div>
 
