--- a/index.html
+++ b/index.html
@@ -92,24 +92,49 @@
 
       <div class="row marketing">
         <div class="col-lg-6">
-          <h4>Simple Word Families</h4>
-          <p><a class="btn" role="button" onclick="setup('e');nextWord()">e</a></p>
-          <p><a class="btn" role="button" onclick="setup('up');nextWord()">up</a></p>
-          <p><a class="btn" role="button" onclick="setup('im');nextWord()">im</a></p>
-          <p><a class="btn" role="button" onclick="setup('ad');nextWord()">ad</a></p>
-          <p><a class="btn" role="button" onclick="setup('ee');nextWord()">ee</a></p>
-          <p><a class="btn" role="button" onclick="setup('ed');nextWord()">ed</a></p>
-          <p><a class="btn" role="button" onclick="setup('all');nextWord()">all</a></p>
-          <p><a class="btn" role="button" onclick="setup('ay');nextWord()">ay</a></p>
-          <p><a class="btn" role="button" onclick="setup('at');nextWord()">at</a></p>
-          <p><a class="btn" role="button" onclick="setup('ish');nextWord()">ish</a></p>
+          <h4>Level 1</h4>
+          <p>
+            <button type="button" class="btn btn-lg btn-primary" onclick="setup('e');nextWord()">e</button>
+            <button type="button" class="btn btn-lg btn-primary" onclick="setup('up');nextWord()">up</button>
+            <button type="button" class="btn btn-lg btn-primary" onclick="setup('im');nextWord()">im</button>
+            <button type="button" class="btn btn-lg btn-primary" onclick="setup('ad');nextWord()">ad</button>
+            <button type="button" class="btn btn-lg btn-primary" onclick="setup('ee');nextWord()">ee</button>
+          </p>
+
+
+          <h4>Level 2</h4>
+            <button type="button" class="btn btn-lg btn-primary" onclick="setup('ed');nextWord()">ed</button>
+            <button type="button" class="btn btn-lg btn-primary" onclick="setup('ay');nextWord()">ay</button>
+            <button type="button" class="btn btn-lg btn-primary" onclick="setup('at');nextWord()">at</button>
+            <button type="button" class="btn btn-lg btn-primary" onclick="setup('all');nextWord()">all</button>
+            <button type="button" class="btn btn-lg btn-primary" onclick="setup('ish');nextWord()">ish</button>
+          </p>
+
+          <h4>Level 3</h4>
+          <p>
+            <button type="button" class="btn btn-lg btn-primary" onclick="setup('erry');nextWord()">erry</button>
+            <button type="button" class="btn btn-lg btn-primary" onclick="setup('ight');nextWord()">ight</button>
+            <button type="button" class="btn btn-lg btn-primary" onclick="setup('ouse');nextWord()">ouse</button>
+          </p>
+
+
+          <!--
+          <h4>Level </h4>
+          <p>
+          </p>
+
+          -->
+
         </div>
 
         <div class="col-lg-6">
-          <h4>Complex Word Famlies</h4>
-          <p><a class="btn" role="button" onclick="setup('erry');nextWord()">erry</a></p>
-          <p><a class="btn" role="button" onclick="setup('ight');nextWord()">ight</a></p>
-          <p><a class="btn" role="button" onclick="setup('ouse');nextWord()">ouse</a></p>
+          <h4>Level 4</h4>
+          <p>
+          </p>
+
+          <h4>Level 5</h4>
+          <p>
+          </p>
         </div>
       </div>
 
